tests/rosetta/out/Zig/circles-of-given-radius-through-two-points.error
zig build error: exit status 1
/tmp/TestMochiZigGoldencircles-of-given-radius-through-two-points3336562316/001/prog.zig:33:5: error: expected type 'prog.Point', found 'comptime_float'
/tmp/TestMochiZigGoldencircles-of-given-radius-through-two-points3336562316/001/prog.zig:12:15: note: struct declared here
